Create base template

--- a/templates/reviews.html
+++ b/templates/reviews.html
@@ -1,11 +1,6 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Books and Scrolls</title>
-</head>
-<body>
+{% extends "base.html" %}
+{% block content %}
+
     {% for review in reviews %}
         {{ review.title }}<br>
         {{ review.author }}<br>
@@ -14,5 +9,5 @@
         {{ review.genre }}<br>
         {{ review.user_created }}<br>
     {% endfor %}
-</body>
-</html>
+
+{% endblock %}
