add Signup template

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -9,3 +9,9 @@
 .fa-book-open:before {
     padding-left: 15px;
 }
+
+/*---------------------------------------------------------- Font Size */
+
+.font-size-large {
+    font-size: x-large;
+}
