--- a/templates/base.html
+++ b/templates/base.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="icon" type="image/x-icon" href="{{ url_for('static', filename='css/style.css') }}">
+    <link rel="icon" type="image/x-icon" href="{{ url_for('static', filename='images/favicon.ico') }}">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css"
         integrity="sha512-SnH5WK+bZxgPHs44uWIX+LLJAJ9/2PkPKZ5QiAj6Ta86w+fsb2TkcmfRyVX3pBnMFcV7oQPJkl9QevSCWr3W6A==" crossorigin="anonymous" referrerpolicy="no-referrer" type="text/css" />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css" type="text/css">
@@ -16,7 +16,7 @@
 
     <header>
         <nav>
-            <div class="nav-wrapper green lighten-2 text-shadow">
+            <div class="nav-wrapper light-green darken-1 text-shadow">
                 <a href="#" class="brand-logo"> <i class="fas fa-book-open"></i>Books and scrolls</a>
                 <a href="#" data-target="mobile-demo" class="sidenav-trigger"><i class="fas fa-bars"></i></a>
                 <ul class="right hide-on-med-and-down">
@@ -25,20 +25,20 @@
                     <li><a href="#">Profile</a></li>
                     <li><a href="#">Log In</a></li>
                     <li><a href="#">Log Out</a></li>
-                    <li><a href="#">Sign Up</a></li>
+                    <li><a href="{{ url_for('signup') }}">Sign Up</a></li>
 
                 </ul>
             </div>
         </nav>
 
         <ul class="sidenav" id="mobile-demo">
-            <li><h4 class="center-align green-text text-lighten-2">Books and Scrolls</h4></li>
+            <li><h4 class="center-align light-green-text text-darken-1">Books and Scrolls</h4></li>
             <li><a href="{{ url_for('get_reviews') }}">Home</a></li>
             <li><a href="#">Add Review</a></li>
             <li><a href="#">Profile</a></li>
             <li><a href="#">Log In</a></li>
             <li><a href="#">Log Out</a></li>
-            <li><a href="#">Sign Up</a></li>
+            <li><a href="{{ url_for('signup') }}">Sign Up</a></li>
 
         </ul>
     </header>
