--- a/static/css/style.css
+++ b/static/css/style.css
@@ -4,14 +4,19 @@
     text-shadow: 2px 2px 2px rgba(0,0,0,0.5);
 }
 
+/*---------------------------------------------------------- Font Size */
+
+.font-size-large {
+    font-size: x-large;
+}
+
 /*---------------------------------------------------------- Book Icon */
 
 .fa-book-open:before {
     padding-left: 15px;
 }
 
-/*---------------------------------------------------------- Font Size */
-
-.font-size-large {
-    font-size: x-large;
+/*---------------------------------------------------------- Flashes */
+.flashes h4 {
+    line-height: 2;
 }
