--- a/templates/base.html
+++ b/templates/base.html
@@ -23,7 +23,7 @@
                     <li><a href="{{ url_for('get_reviews') }}">Home</a></li>
                     <li><a href="#">Add Review</a></li>
                     <li><a href="#">Profile</a></li>
-                    <li><a href="#">Log In</a></li>
+                    <li><a href="{{ url_for('login') }}">Log In</a></li>
                     <li><a href="#">Log Out</a></li>
                     <li><a href="{{ url_for('signup') }}">Sign Up</a></li>
 
@@ -36,7 +36,7 @@
             <li><a href="{{ url_for('get_reviews') }}">Home</a></li>
             <li><a href="#">Add Review</a></li>
             <li><a href="#">Profile</a></li>
-            <li><a href="#">Log In</a></li>
+            <li><a href="{{ url_for('login') }}">Log In</a></li>
             <li><a href="#">Log Out</a></li>
             <li><a href="{{ url_for('signup') }}">Sign Up</a></li>
 
