--- a/templates/login.html
+++ b/templates/login.html
@@ -1,15 +1,15 @@
 {% extends "base.html" %}
 {% block content %}
 
-<h3 class="center-align">Sign Up!</h3>
+<h3 class="center-align">Log In!</h3>
 
     <div class="row">
-        <form class="col s12 m8 offset-m2" method="POST" action="{{ url_for('signup') }}">
+        <form class="col s12 m8 offset-m2" method="POST" action="{{ url_for('login') }}">
             <div class="card-panel">
                 <!-- username -->
                 <div class="row">
 					<div class="input-field col s12">
-						<i class="fas fa-user-plus prefix light-green-text text-darken-2"></i>
+						<i class="fas fa-user-cog prefix light-green-text text-darken-2"></i>
 						<input id="username" name="username" type="text" class="validate"
                             pattern="^[a-zA-Z0-9]{3,15}$" required>
 						<label for="username">Username</label>
@@ -24,19 +24,10 @@
                         <label for="password">Password</label>
                     </div>
                 </div>
-                <!-- repeat password -->
-                <div class="row">
-                    <div class="input-field col s12">
-						<i class="fas fa-user-lock prefix light-green-text text-darken-2"></i>
-                        <input id="confirm_password" name="confirm_password" type="password" class="validate" 
-                            pattern="^[a-zA-Z0-9]{3,15}$" minlength="3" maxlength="15"required>
-                        <label for="confirm_password">Confirm Password</label>
-                    </div>
-                </div>
                 <!-- signup -->
                 <div class="row">
                     <button type="submit" class="col s12 btn-large light-green darken-1 font-size-large text-shadow">
-                        Get Started!
+                        Log In
                     </button>
                 </div>
             </div>
@@ -46,7 +37,7 @@
     <div class="row">
         <div class="col s12">
             <p class="center-align">
-                Already Registered? <a href="{{ url_for('login') }}" class="light-green-text darken-2">Log In!</a>
+                New Here? <a href="{{ url_for('signup') }}" class="light-green-text darken-2">Sign Up!</a>
             </p>
         </div>
     </div>
