--- a/templates/base.html
+++ b/templates/base.html
@@ -22,7 +22,7 @@
                 <ul class="right hide-on-med-and-down">
                     <li><a href="{{ url_for('get_reviews') }}">Home</a></li>
                     <li><a href="#">Add Review</a></li>
-                    <li><a href="#">Profile</a></li>
+                    <li><a href="{{ url_for('profile', username=session['user']) }}">Profile</a></li>
                     <li><a href="{{ url_for('login') }}">Log In</a></li>
                     <li><a href="#">Log Out</a></li>
                     <li><a href="{{ url_for('signup') }}">Sign Up</a></li>
@@ -35,7 +35,7 @@
             <li><h4 class="center-align light-green-text text-darken-1">Books and Scrolls</h4></li>
             <li><a href="{{ url_for('get_reviews') }}">Home</a></li>
             <li><a href="#">Add Review</a></li>
-            <li><a href="#">Profile</a></li>
+            <li><a href="{{ url_for('profile', username=session['user']) }}">Profile</a></li>
             <li><a href="{{ url_for('login') }}">Log In</a></li>
             <li><a href="#">Log Out</a></li>
             <li><a href="{{ url_for('signup') }}">Sign Up</a></li>
