--- a/templates/base.html
+++ b/templates/base.html
@@ -21,12 +21,14 @@
                 <a href="#" data-target="mobile-demo" class="sidenav-trigger"><i class="fas fa-bars"></i></a>
                 <ul class="right hide-on-med-and-down">
                     <li><a href="{{ url_for('get_reviews') }}">Home</a></li>
-                    <li><a href="#">Add Review</a></li>
-                    <li><a href="{{ url_for('profile', username=session['user']) }}">Profile</a></li>
-                    <li><a href="{{ url_for('login') }}">Log In</a></li>
-                    <li><a href="#">Log Out</a></li>
-                    <li><a href="{{ url_for('signup') }}">Sign Up</a></li>
-
+                    {% if session.user %}
+                        <li><a href="#">Add Review</a></li>
+                        <li><a href="{{ url_for('profile', username=session['user']) }}">Profile</a></li>
+                        <li><a href="{{ url_for('logout') }}">Log Out</a></li>
+                    {% else %}
+                        <li><a href="{{ url_for('login') }}">Log In</a></li>
+                        <li><a href="{{ url_for('signup') }}">Sign Up</a></li>
+                    {% endif %}
                 </ul>
             </div>
         </nav>
@@ -34,12 +36,14 @@
         <ul class="sidenav" id="mobile-demo">
             <li><h4 class="center-align light-green-text text-darken-1">Books and Scrolls</h4></li>
             <li><a href="{{ url_for('get_reviews') }}">Home</a></li>
-            <li><a href="#">Add Review</a></li>
-            <li><a href="{{ url_for('profile', username=session['user']) }}">Profile</a></li>
-            <li><a href="{{ url_for('login') }}">Log In</a></li>
-            <li><a href="#">Log Out</a></li>
-            <li><a href="{{ url_for('signup') }}">Sign Up</a></li>
-
+            {% if session.user %}
+                <li><a href="#">Add Review</a></li>
+                <li><a href="{{ url_for('profile', username=session['user']) }}">Profile</a></li>
+                <li><a href="{{ url_for('logout') }}">Log Out</a></li>
+            {% else %}
+                <li><a href="{{ url_for('login') }}">Log In</a></li>
+                <li><a href="{{ url_for('signup') }}">Sign Up</a></li>
+            {% endif %}
         </ul>
     </header>
 
