--- a/templates/profile.html
+++ b/templates/profile.html
@@ -8,6 +8,10 @@
                 <h3 class="center-align light-green-text text-darken-2">
                     {{ username.capitalize() }}'s Profile
                 </h3>
+                <h5 class="center-align">
+                    <a class="light-green-text text-darken-2" 
+                        href="{{ url_for('change_password') }}">Change Password</a>
+                </h5>
             
             </div>
         </div>
