--- a/templates/change_password.html
+++ b/templates/change_password.html
@@ -1,30 +1,30 @@
 {% extends "base.html" %}
 {% block content %}
 
-<h3 class="center-align">Sign Up!</h3>
+<h3 class="center-align">Change Password</h3>
 
     <div class="row">
         <form class="col s12 m8 offset-m2" method="POST" action="{{ url_for('signup') }}">
             <div class="card-panel">
-                <!-- username -->
-                <div class="row">
-					<div class="input-field col s12">
-						<i class="fas fa-user-plus prefix light-green-text text-darken-2"></i>
-						<input id="username" name="username" type="text" class="validate"
-                            pattern="^[a-zA-Z0-9]{3,15}$" required>
-						<label for="username">Username</label>
-					</div>
-                </div>
-                <!-- password -->
+                <!-- Old Password -->
                 <div class="row">
                     <div class="input-field col s12">
 						<i class="fas fa-user-lock prefix light-green-text text-darken-2"></i>
-                        <input id="password" name="password" type="password" class="validate"
+                        <input id="old_password" name="old_password" type="password" class="validate"
                             pattern="^[a-zA-Z0-9]{3,15}$" minlength="3" maxlength="15" required>
-                        <label for="password">Password</label>
+                        <label for="old_password">Old Password</label>
                     </div>
                 </div>
-                <!-- repeat password -->
+                <!-- New Password -->
+                <div class="row">
+                    <div class="input-field col s12">
+						<i class="fas fa-user-lock prefix light-green-text text-darken-2"></i>
+                        <input id="new_password" name="password" type="password" class="validate"
+                            pattern="^[a-zA-Z0-9]{3,15}$" minlength="3" maxlength="15" required>
+                        <label for="new_password">New Password</label>
+                    </div>
+                </div>
+                <!-- Confirm Password -->
                 <div class="row">
                     <div class="input-field col s12">
 						<i class="fas fa-user-lock prefix light-green-text text-darken-2"></i>
@@ -36,7 +36,7 @@
                 <!-- signup -->
                 <div class="row">
                     <button type="submit" class="col s12 btn-large light-green darken-1 font-size-large text-shadow">
-                        Get Started!
+                        Update Password
                     </button>
                 </div>
             </div>
