--- a/templates/login.html
+++ b/templates/login.html
@@ -15,7 +15,7 @@
 						<label for="username">Username</label>
 					</div>
                 </div>
-                <!-- passowrd -->
+                <!-- password -->
                 <div class="row">
                     <div class="input-field col s12">
 						<i class="fas fa-user-lock prefix light-green-text text-darken-2"></i>
