--- a/static/css/style.css
+++ b/static/css/style.css
@@ -4,10 +4,20 @@
     text-shadow: 2px 2px 2px rgba(0,0,0,0.5);
 }
 
-/*---------------------------------------------------------- Font Size */
+/*---------------------------------------------------------- Font */
 
 .font-size-large {
     font-size: x-large;
+}
+
+.uppercase {
+    text-transform: uppercase;
+}
+
+@media only screen and (max-width: 580px) {
+    nav .brand-logo {
+        font-size: medium;
+    }
 }
 
 /*---------------------------------------------------------- Book Icon */
@@ -20,3 +30,9 @@
 .flashes h4 {
     line-height: 2;
 }
+
+/*---------------------------------------------------------- review images */
+/* .card .card-image img {
+    max-width: 500px;
+    max-height: 500px;
+} */
