--- a/templates/base.html
+++ b/templates/base.html
@@ -17,7 +17,7 @@
     <header>
         <nav>
             <div class="nav-wrapper light-green darken-1 text-shadow">
-                <a href="#" class="brand-logo"> <i class="fas fa-book-open"></i>Books and scrolls</a>
+                <a href="#" class="brand-logo uppercase"> <i class="fas fa-book-open hide-on-med-and-down"></i>Books and scrolls</a>
                 <a href="#" data-target="mobile-demo" class="sidenav-trigger"><i class="fas fa-bars"></i></a>
                 <ul class="right hide-on-med-and-down">
                     <li><a href="{{ url_for('get_reviews') }}">Home</a></li>
