--- a/templates/base.html
+++ b/templates/base.html
@@ -22,7 +22,7 @@
                 <ul class="right hide-on-med-and-down">
                     <li><a href="{{ url_for('get_reviews') }}">Home</a></li>
                     {% if session.user %}
-                        <li><a href="#">Add Review</a></li>
+                        <li><a href="{{ url_for('add_review') }}">Add Review</a></li>
                         <li><a href="{{ url_for('profile', username=session['user']) }}">Profile</a></li>
                         <li><a href="{{ url_for('logout') }}">Log Out</a></li>
                     {% else %}
@@ -37,7 +37,7 @@
             <li><h4 class="center-align light-green-text text-darken-1">Books and Scrolls</h4></li>
             <li><a href="{{ url_for('get_reviews') }}">Home</a></li>
             {% if session.user %}
-                <li><a href="#">Add Review</a></li>
+                <li><a href="{{ url_for('add_review') }}">Add Review</a></li>
                 <li><a href="{{ url_for('profile', username=session['user']) }}">Profile</a></li>
                 <li><a href="{{ url_for('logout') }}">Log Out</a></li>
             {% else %}
