--- a/templates/change_password.html
+++ b/templates/change_password.html
@@ -33,7 +33,7 @@
                         <label for="confirm_password">Confirm Password</label>
                     </div>
                 </div>
-                <!-- signup -->
+                <!-- Update password -->
                 <div class="row">
                     <button type="submit" class="col s12 btn-large light-green darken-1 font-size-large text-shadow">
                         Update Password
