--- a/templates/add_review.html
+++ b/templates/add_review.html
@@ -3,15 +3,18 @@
 
 <h3 class="light-green-text text-darken-2 center-align">Add Review</h3>
 
-<div class="row">
-    <form class="col s12" method="POST" action="">
+<div class="row card-panel grey lighten-5">
+    <form class="col s12" method="POST" action="{{ url_for('add_review') }}">
+        <!-- add title -->
         <div class="row">
             <div class="input-field col s12">
                 <i class="fas fa-book prefix light-green-text text-darken-2"></i>
-                <input id="title" name="title" type="text" class="validate" required>
+                <input id="title" name="title" type="text" minlength="1"
+                    maxlength="40" class="validate" required>
                 <label for="title">Title...</label>
             </div>
         </div>
+        <!-- add author -->
         <div class="row">
             <div class="input-field col s12">
                 <i class="fas fa-user-circle prefix light-green-text text-darken-2"></i>
@@ -19,13 +22,15 @@
                 <label for="author">Author...</label>
             </div>
         </div>
+        <!-- add genre -->
         <div class="row">
             <div class="input-field col s12">
                 <i class="fas fa-masks-theater prefix light-green-text text-darken-2"></i>
-                <input id="genre" name="genre" type="text" class="validate" required>
+                <input id="genre" name="genre" type="text" maxlength="30" class="validate" required>
                 <label for="genre">Genre...</label>
             </div>
         </div>
+        <!-- select rating */10 -->
         <div class="row">
             <div class="input-field col s12">
                 <i class="fas fa-star prefix light-green-text text-darken-2"></i>
@@ -44,18 +49,29 @@
                 </select>
             </div>
         </div>
+        <!-- add summary/description -->
         <div class="row">
             <div class="input-field col s12">
                 <i class="fas fa-align-left prefix light-green-text text-darken-2"></i>
-                <textarea id="summary" name="summary" minlength="5" maxlength="500" class="materialize-textarea validate" required></textarea>
+                <textarea id="summary" name="summary" minlength="5" maxlength="500"
+                    class="materialize-textarea validate" required></textarea>
                 <label for="summary">Summary...</label>
             </div>
         </div>
+        <!-- add image URL -->
         <div class="row">
             <div class="input-field col s12">
                 <i class="fas fa-image prefix light-green-text text-darken-2"></i>
                 <input id="cover_art" name="cover_art" type="text" class="validate" required>
                 <label for="cover_art">Image URL...</label>
+            </div>
+        </div>
+        <!-- submit button -->
+        <div class="row">
+            <div class="col s12 center-align">
+                <button type="submit" class="btn-large light-green darken-2 text-shadow">
+                    Add Review <i class="fas fa-pencil right"></i>
+                </button>
             </div>
         </div>
     </form>
