--- a/templates/reviews.html
+++ b/templates/reviews.html
@@ -1,29 +1,30 @@
 {% extends "base.html" %}
 {% block content %}
-
-    {% for review in reviews %}
-        <div class="row">
-            <div class="col s12 m6 xl4">
-                <div class="card">
-                    <div class="card-image waves-effect waves-block waves-light">
-                      <img class="activator" src="{{ review.cover_art }}">
-                    </div>
-                    <div class="card-content">
-                        <span class="card-title activator grey-text text-darken-4">
-                            <h4>{{ review.title.title() }}<i class="fas fa-chevron-up right"></i></h4>
-                        </span>
-                    <p><strong>Author:</strong> {{ review.author.title() }}</p>
-                    <p><strong>Genre:</strong> {{ review.genre.title() }}/10</p>
-                    <p><strong>Rating:</strong> {{ review.rating }}/10</p>
-                    <p><strong>Created by:</strong> {{ review.user_created.capitalize() }}</p>
-                    </div>
-                    <div class="card-reveal">
-                      <span class="card-title grey-text text-darken-4"><strong>{{ review.title.title() }}</strong><i class="fas fa-x right"></i></span>
-                      <p><strong>Summary:</strong> {{ review.summary }}</p>
+    <div class="row">
+        {% for review in reviews %}
+                <div class="col s12 m6 xl4">
+                    <div class="card">
+                        <div class="card-image waves-effect waves-block waves-light">
+                            <img class="activator" src="{{ review.cover_art }}">
+                        </div>
+                        <div class="card-content">
+                            <span class="card-title activator grey-text text-darken-4">
+                                <h4>{{ review.title.title() }}<i class="fas fa-chevron-up right"></i></h4>
+                            </span>
+                        <p><strong>Author:</strong> {{ review.author.title() }}</p>
+                        <p><strong>Genre:</strong> {{ review.genre.capitalize() }}</p>
+                        <p><strong>Rating:</strong> {{ review.rating }}/10</p>
+                        <p><strong>Created by:</strong> {{ review.user_created.capitalize() }}</p>
+                        </div>
+                        <div class="card-reveal">
+                        <span class="card-title grey-text text-darken-4"><strong>{{ review.title.title() }}</strong><i class="fas fa-x right"></i></span>
+                        <p><strong>Summary:</strong> {{ review.summary }}</p>
+                        <a class="waves-effect waves-light btn light-green darken-1"><i class="fas fa-cog"></i></a>
+                        <a class="waves-effect waves-light btn red"><i class="fas fa-trash"></i></a>
+                        </div>
                     </div>
                 </div>
-            </div>
-        </div>
-      {% endfor %}
+        {% endfor %}
+    </div>
 
 {% endblock %}
