--- a/static/css/style.css
+++ b/static/css/style.css
@@ -14,6 +14,10 @@
     text-transform: uppercase;
 }
 
+.capitalize {
+    text-transform: capitalize;
+}
+
 @media only screen and (max-width: 580px) {
     nav .brand-logo {
         font-size: medium;
