--- a/templates/reviews.html
+++ b/templates/reviews.html
@@ -11,16 +11,19 @@
                             <span class="card-title activator grey-text text-darken-4">
                                 <h4>{{ review.title.title() }}<i class="fas fa-chevron-up right"></i></h4>
                             </span>
-                        <p><strong>Author:</strong> {{ review.author.title() }}</p>
-                        <p><strong>Genre:</strong> {{ review.genre.capitalize() }}</p>
-                        <p><strong>Rating:</strong> {{ review.rating }}/10</p>
-                        <p><strong>Created by:</strong> {{ review.user_created.capitalize() }}</p>
+                            <p><strong>Author:</strong> {{ review.author.title() }}</p>
+                            <p><strong>Genre:</strong> {{ review.genre.capitalize() }}</p>
+                            <p><strong>Rating:</strong> {{ review.rating }}/10</p>
+                            <p><strong>Created by:</strong> {{ review.user_created.capitalize() }}</p>
                         </div>
                         <div class="card-reveal">
-                        <span class="card-title grey-text text-darken-4"><strong>{{ review.title.title() }}</strong><i class="fas fa-x right"></i></span>
-                        <p><strong>Summary:</strong> {{ review.summary }}</p>
-                        <a href="{{ url_for('edit_review', review_id=review._id) }}" class="btn left light-green darken-1"><i class="fas fa-cog"></i></a>
-                        <a href="#" class="btn right red darken-1"><i class="fas fa-trash"></i></a>
+                            <span class="card-title grey-text text-darken-4"><strong>{{ review.title.title() }}</strong><i class="fas fa-x right"></i></span>
+                            <p><strong>Summary:</strong> {{ review.summary }}</p>
+                            {% if session.user|lower == review.user_created|lower %}
+                                <a href="{{ url_for('edit_review', review_id=review._id) }}"
+                                    class="btn left light-green darken-1"><i class="fas fa-cog"></i></a>
+                                <a href="#" class="btn right red darken-1"><i class="fas fa-trash"></i></a>
+                            {% endif %}
                         </div>
                     </div>
                 </div>
