--- a/templates/edit_review.html
+++ b/templates/edit_review.html
@@ -18,8 +18,8 @@
         <div class="row">
             <div class="input-field col s12">
                 <i class="fas fa-user-circle prefix light-green-text text-darken-2"></i>
-                <input id="author" name="author" type="text" class="validate"
-                    value="{{ review.author.title() }}" required>
+                <input id="author" name="author" type="text" class="validate" minlength="1" 
+                    maxlength="50" value="{{ review.author.title() }}" required>
                 <label for="author">Author...</label>
             </div>
         </div>
@@ -27,7 +27,7 @@
         <div class="row">
             <div class="input-field col s12">
                 <i class="fas fa-masks-theater prefix light-green-text text-darken-2"></i>
-                <input id="genre" name="genre" type="text" maxlength="30" class="capitalize validate"
+                <input id="genre" name="genre" type="text" maxlength="40" class="capitalize validate"
                     value="{{ review.genre }}" required>
                 <label for="genre">Genre...</label>
             </div>
