--- a/templates/profile.html
+++ b/templates/profile.html
@@ -16,4 +16,57 @@
         </div>
     </div>
 
+    <div class="row">
+        {% if reviews != exists %}
+                <div class="row">
+                    <h3 class="center">It looks like you haven't written any reviews yet!</h3>
+                    <a href="{{ url_for('add_review') }}" class="light-green darken-2">
+                        <h4 class="center capitalize light-green-text text-darken-2">get writing!</h4>
+                    </a>
+                </div>
+        {% endif %}
+        {% for review in reviews %}
+            {% if session["user"] == review.user_created %}
+            <div class="col s12 m6 l4">
+                <div class="card card-height">
+                    <div class="card-image waves-effect waves-block waves-light">
+                        <img class="activator" src="{{ review.cover_art }}">
+                    </div>
+                    <div class="card-content">
+                        <span class="card-title activator grey-text text-darken-4">
+                            <h4>{{ review.title.title() }}<i class="fas fa-chevron-up right"></i></h4>
+                        </span>
+                        <p><strong>Author:</strong> {{ review.author.title() }}</p>
+                        <p><strong>Genre:</strong> {{ review.genre.capitalize() }}</p>
+                        <p><strong>Rating:</strong> {{ review.rating }}/10</p>
+                        <p><strong>Created by:</strong> {{ review.user_created.capitalize() }}</p>
+                    </div>
+                    <div class="card-reveal">
+                        <span class="card-title grey-text text-darken-4"><strong>{{ review.title.title() }}</strong><i
+                                class="fas fa-x right"></i></span>
+                        <p><strong>Summary:</strong> {{ review.summary }}</p>
+                        {% if session.user|lower == review.user_created|lower %}
+                        <a href="{{ url_for('edit_review', review_id=review._id) }}"
+                            class="btn left light-green darken-1"><i class="fas fa-cog"></i></a>
+                        <!-- Modal Trigger -->
+                        <a href="#deleteReviewModal" class="btn right red darken-1 modal-trigger"><i
+                                class="fas fa-trash"></i></a>
+                        {% endif %}
+                    </div>
+                </div>
+            </div>
+            {% endif %}
+        {% endfor %}
+        </div>
+
+    <!-- Modal Structure -->
+    <div id="deleteReviewModal" class="modal">
+        <div class="modal-content">
+            <h4 class="center">Are you sure?</h4>
+            <a href="#!" class="modal-close light-green darken-2 btn-large">Cancel</a>
+            <a href="#"
+                class="red darken-1 btn right">Delete Review</a>
+        </div>
+    </div>
+
 {% endblock %}
