--- a/templates/reviews.html
+++ b/templates/reviews.html
@@ -2,8 +2,8 @@
 {% block content %}
     <div class="row">
         {% for review in reviews %}
-                <div class="col s12 m6 xl4">
-                    <div class="card">
+                <div class="col s12 m6 l4 xl3">
+                    <div class="card card-height">
                         <div class="card-image waves-effect waves-block waves-light">
                             <img class="activator" src="{{ review.cover_art }}">
                         </div>
@@ -22,7 +22,9 @@
                             {% if session.user|lower == review.user_created|lower %}
                                 <a href="{{ url_for('edit_review', review_id=review._id) }}"
                                     class="btn left light-green darken-1"><i class="fas fa-cog"></i></a>
-                                <a href="#" class="btn right red darken-1"><i class="fas fa-trash"></i></a>
+                                <!-- Modal Trigger -->
+                                <a href="#deleteReviewModal"
+                                    class="btn right red darken-1 modal-trigger"><i class="fas fa-trash"></i></a>
                             {% endif %}
                         </div>
                     </div>
@@ -30,4 +32,14 @@
         {% endfor %}
     </div>
 
+    <!-- Modal Structure -->
+    <div id="deleteReviewModal" class="modal">
+        <div class="modal-content">
+            <h4 class="center">Are you sure?</h4>
+            <a href="#!" class="modal-close light-green darken-2 btn-large">Cancel</a>
+            <a href="#"
+                class="red darken-1 btn right">Delete Review</a>
+        </div>
+    </div>
+   
 {% endblock %}
