fixed overflow of text in review cards and allowed user to make edits and delete

--- a/templates/register.html
+++ b/templates/register.html
@@ -50,4 +50,5 @@
             </p>
         </div>
     </div>
+    <script src="{{ url_for('static', filename='js/password_validate.js') }}"></script>
 {% endblock %}
