--- a/templates/profile.html
+++ b/templates/profile.html
@@ -19,7 +19,7 @@
     <div class="row">
         {% if reviews|length > 0 %}
             {% for review in reviews %}
-                {% if session.user|lower == review.user_created|lower %}
+                {% if session["user"] == review.user_created or session["user"] == "admin" %}
                 <div class="col s12 m6 l4">
                     <div class="card card-height">
                         <div class="card-image waves-effect waves-block waves-light">
@@ -27,7 +27,7 @@
                         </div>
                         <div class="card-content">
                             <span class="card-title activator grey-text text-darken-4">
-                                <h4>{{ review.title.title() }}<i class="fas fa-chevron-up right"></i></h4>
+                                <h4 class="truncate">{{ review.title.title() }}<i class="fas fa-chevron-up right"></i></h4>
                             </span>
                             <p><strong>Author:</strong> {{ review.author.title() }}</p>
                             <p><strong>Genre:</strong> {{ review.genre.capitalize() }}</p>
