--- a/templates/reviews.html
+++ b/templates/reviews.html
@@ -28,7 +28,7 @@
                         </div>
                         <div class="card-content">
                             <span class="card-title activator grey-text text-darken-4">
-                                <h4>{{ review.title.title() }}<i class="fas fa-chevron-up right"></i></h4>
+                                <h4 class="tooltipped truncate" data-position="top" data-tooltip="{{ review.title.title() }}">{{ review.title.title() }}<i class="fas fa-chevron-up right"></i></h4>
                             </span>
                             <p><strong>Author:</strong> {{ review.author.title() }}</p>
                             <p><strong>Genre:</strong> {{ review.genre.capitalize() }}</p>
@@ -38,12 +38,12 @@
                         <div class="card-reveal">
                             <span class="card-title grey-text text-darken-4"><strong>{{ review.title.title() }}</strong><i class="fas fa-x right"></i></span>
                             <p><strong>Summary:</strong> {{ review.summary }}</p>
-                            {% if session.user|lower == review.user_created|lower %}
+                            {% if session["user"] == review.user_created or session["user"] == "admin" %}
                                 <a href="{{ url_for('edit_review', review_id=review._id) }}"
                                     class="btn left light-green darken-1"><i class="fas fa-cog"></i></a>
                                 <!-- Modal Trigger -->
                                 <a href="#deleteReviewModal"
-                                    class="btn right red darken-1 modal-trigger"><i class="fas fa-trash"></i></a>
+                                    class="btn right red darken-1 modal-trigger delete-btn" data-review-id="{{ review._id }}"><i class="fas fa-trash"></i></a>
                             {% endif %}
                         </div>
                     </div>
@@ -55,8 +55,8 @@
     <div id="deleteReviewModal" class="modal">
         <div class="modal-content">
             <h4 class="center">Are you sure?</h4>
-            <a href="#!" class="modal-close light-green darken-2 btn-large">Cancel</a>
-            <a href="#"
+            <a href="#" class="modal-close light-green darken-2 btn-large">Cancel</a>
+            <a href="#" id="confirm-delete"
                 class="red darken-1 btn right">Delete Review</a>
         </div>
     </div>
