--- a/static/css/style.css
+++ b/static/css/style.css
@@ -27,7 +27,7 @@
 .material-tooltip {
     font-size: x-large;
     font-weight: 500;
-    background-color: transparent;
+    background-color: rgba(255,255,255,0.8);
     color: black;
     position: absolute;
 }
