added option for affilate link if logged into admin.

--- a/templates/add_review.html
+++ b/templates/add_review.html
@@ -54,7 +54,7 @@
         <div class="row">
             <div class="input-field col s12">
                 <i class="fas fa-align-left prefix light-green-text text-darken-2"></i>
-                <textarea id="summary" name="summary" minlength="5" maxlength="500"
+                <textarea id="summary" name="summary" minlength="5" maxlength="800"
                     class="materialize-textarea validate" required></textarea>
                 <label for="summary">Summary...</label>
             </div>
@@ -72,6 +72,16 @@
                 <label for="cover_art">Image URL...</label>
             </div>
         </div>
+        <!-- add affiliate link -->
+        {% if session["user"] == "admin" %}
+        <div class="row">
+           <div class="input-field col s12">
+               <i class="fas fa-link prefix light-green-text text-darken-2"></i>
+               <input id="affiliate_link" name="affiliate_link" type="text" class="validate">
+               <label for="affiliate_link">Affilate Link...</label>
+           </div>
+       </div>
+       {% endif %}
         <!-- submit button -->
         <div class="row">
             <div class="col s12 center-align">
