--- a/templates/profile.html
+++ b/templates/profile.html
@@ -8,10 +8,9 @@
                     {{ username.capitalize() }}'s Profile
                 </h3>
                 <h5 class="center-align">
-                    <a class="light-green-text text-darken-2" 
-                        href="{{ url_for('change_password') }}">Change Password</a>
+                    <a class="light-green-text text-darken-2" href="{{ url_for('change_password') }}">Change Password</a>
                 </h5>
-            
+
             </div>
         </div>
     </div>
@@ -20,51 +19,64 @@
         {% if reviews|length > 0 %}
             {% for review in reviews %}
                 {% if session["user"] == review.user_created or session["user"] == "admin" %}
-                <div class="col s12 m6 l4">
+                <div class="col s12 m6 xl4">
                     <div class="card card-height">
                         <div class="card-image waves-effect waves-block waves-light">
                             <img class="activator" src="{{ review.cover_art }}">
                         </div>
                         <div class="card-content">
                             <span class="card-title activator grey-text text-darken-4">
-                                <h4 class="truncate">{{ review.title.title() }}<i class="fas fa-chevron-up right"></i></h4>
+                                <p><i class="fas fa-bars right"></i></p>
                             </span>
-                            <p><strong>Author:</strong> {{ review.author.title() }}</p>
-                            <p><strong>Genre:</strong> {{ review.genre.capitalize() }}</p>
+                            <h5 class="truncate"><strong>{{ review.title.title() }}</strong></h5>
+                            <div class="spacing"></div>
+                            <p class="truncate"><strong>Author:</strong> {{ review.author.title() }}</p>
+                            <p class="truncate"><strong>Genre:</strong> {{ review.genre.capitalize() }}</p>
                             <p><strong>Rating:</strong> {{ review.rating }}/10</p>
-                            <p><strong>Created by:</strong> {{ review.user_created.capitalize() }}</p>
+                            <p class="truncate"><strong>Created by:</strong> {{ review.user_created.capitalize() }}</p>
+                            {% if review.affiliate_link %}
+                            <div class="spacing"></div>
+                            <a href="{{ review.affiliate_link }}" target="_blank" id="fix-btn-location" class="uppercase btn light-green darken-2">Buy Now!</a>
+                            {% endif %}
                         </div>
                         <div class="card-reveal">
                             <span class="card-title grey-text text-darken-4"><strong>{{ review.title.title() }}</strong><i
                                     class="fas fa-x right"></i></span>
                             <p><strong>Summary:</strong> {{ review.summary }}</p>
-                            <a href="{{ url_for('edit_review', review_id=review._id) }}"
-                                class="btn left light-green darken-1"><i class="fas fa-cog"></i></a>
+                            {% if review.affiliate_link %}
+                                <div class="spacing"></div>
+                                <a href="{{ review.affiliate_link }}" target="_blank" id="fix-btn-location" class="uppercase btn light-green darken-2">Buy Now!</a>
+                            {% endif %}
+                            {% if session["user"] == review.user_created or session["user"] == "admin" %}
+                            <a href="{{ url_for('edit_review', review_id=review._id) }}" class="btn left light-green darken-1"><i
+                                    class="fas fa-cog"></i></a>
                             <!-- Modal Trigger -->
-                            <a href="#deleteReviewModal" class="btn right red darken-1 modal-trigger"><i
-                                    class="fas fa-trash"></i></a>
+                            <a href="#deleteReviewModal" class="btn right red darken-1 modal-trigger delete-btn"
+                                data-review-id="{{ review._id }}"><i class="fas fa-trash"></i></a>
+                            {% endif %}
                         </div>
                     </div>
                 </div>
                 {% endif %}
             {% endfor %}
-        {% else %}
-            <div class="row">
-                <h3 class="center">It looks like you haven't written any reviews yet!</h3>
-                <a href="{{ url_for('add_review') }}" class="light-green darken-2">
-                    <h4 class="center capitalize light-green-text text-darken-2">get writing!</h4>
-                </a>
-            </div>
-        {% endif %}
-        </div>
+    {% else %}
+    <div class="row">
+        <h3 class="center">It looks like you haven't written any reviews yet!</h3>
+        <a href="{{ url_for('add_review') }}" class="light-green darken-2">
+            <h4 class="center capitalize light-green-text text-darken-2">get writing!</h4>
+        </a>
+    </div>
+    {% endif %}
+    </div>
 
     <!-- Modal Structure -->
     <div id="deleteReviewModal" class="modal">
         <div class="modal-content">
             <h4 class="center">Are you sure?</h4>
-            <a href="#!" class="modal-close light-green darken-2 btn-large">Cancel</a>
-            <a href="#"
+            <h5 class="center"> This will delete the review PERMANENTLY!</h5>
+            <a href="{{ url_for('profile', username=session['user']) }}" id="confirm-delete"
                 class="red darken-1 btn right">Delete Review</a>
+            <a href="#" class="modal-close light-green darken-2 btn right">Cancel</a>
         </div>
     </div>
 
