--- a/templates/reviews.html
+++ b/templates/reviews.html
@@ -11,7 +11,7 @@
                 </div>
                 <div class="col s12 m4">
                     <a href="{{ url_for('get_reviews') }}" class="red darken-1 btn text-shadow">Reset</a>
-                    <button class="light-green darken-1 btn text-shadow">
+                    <button class="light-green darken-1 btn text-shadow overflow-hidden">
                         Search<i class="fas fa-search left"></i>
                     </button>
                 </div>
