added annotation to navbar

--- a/templates/base.html
+++ b/templates/base.html
@@ -16,6 +16,7 @@
 
     <header>
         <nav>
+            <!-- main nav bar -->
             <div class="nav-wrapper light-green darken-1 text-shadow">
                 <a href="{{ url_for('get_reviews') }}" class="brand-logo uppercase"> <i class="fas fa-book-open hide-on-med-and-down"></i>Books and scrolls</a>
                 <a data-target="mobile-demo" class="sidenav-trigger"><i class="fas fa-bars"></i></a>
@@ -32,7 +33,7 @@
                 </ul>
             </div>
         </nav>
-
+        <!-- side nav bar -->
         <ul class="sidenav" id="mobile-demo">
             <li><h4 class="center-align light-green-text text-darken-1">Books and Scrolls</h4></li>
             <li><a href="{{ url_for('get_reviews') }}">Home</a></li>
