--- a/templates/profile.html
+++ b/templates/profile.html
@@ -26,8 +26,7 @@
                         </div>
                         <div class="card-content">
                             <span class="card-title activator grey-text text-darken-4">
-                                <p><i class="fas fa-bars right"></i></p>
-                            </span>
+                                <i class="fas fa-bars right"></i>
                             <h5 class="truncate"><strong>{{ review.title.title() }}</strong></h5>
                             <div class="spacing"></div>
                             <p class="truncate"><strong>Author:</strong> {{ review.author.title() }}</p>
@@ -36,16 +35,15 @@
                             <p class="truncate"><strong>Created by:</strong> {{ review.user_created.capitalize() }}</p>
                             {% if review.affiliate_link %}
                             <div class="spacing"></div>
-                            <a href="{{ review.affiliate_link }}" target="_blank" id="fix-btn-location" class="uppercase btn light-green darken-2">Buy Now!</a>
+                            <a href="{{ review.affiliate_link }}" target="_blank" class="fix-btn-location uppercase btn light-green darken-2">Buy Now!</a>
                             {% endif %}
                         </div>
                         <div class="card-reveal">
-                            <span class="card-title grey-text text-darken-4"><strong>{{ review.title.title() }}</strong><i
-                                    class="fas fa-x right"></i></span>
+                            <span class="card-title grey-text text-darken-4"><strong>{{ review.title.title() }}</strong><i class="fas fa-x right"></i></span>
                             <p><strong>Summary:</strong> {{ review.summary }}</p>
                             {% if review.affiliate_link %}
                                 <div class="spacing"></div>
-                                <a href="{{ review.affiliate_link }}" target="_blank" id="fix-btn-location" class="uppercase btn light-green darken-2">Buy Now!</a>
+                                <a href="{{ review.affiliate_link }}" target="_blank" class="fix-btn-location uppercase btn light-green darken-2">Buy Now!</a>
                             {% endif %}
                             {% if session["user"] == review.user_created or session["user"] == "admin" %}
                             <a href="{{ url_for('edit_review', review_id=review._id) }}" class="btn left light-green darken-1"><i
