--- a/templates/reviews.html
+++ b/templates/reviews.html
@@ -24,11 +24,11 @@
                 <div class="col s12 m6 xl4">
                     <div class="card card-height">
                         <div class="card-image waves-effect waves-block waves-light">
-                            <img class="activator" src="{{ review.cover_art }}">
+                            <img class="activator" src="{{ review.cover_art }}" alt="book cover artwork for the book {{ review.title }}">
                         </div>
                         <div class="card-content">
                             <span class="card-title activator button-floating halfway-fab grey-text text-darken-4">
-                                <p><i class="fas fa-bars right"></i></p>
+                                <i class="fas fa-bars right"></i>
                             </span>
                             <h5 class="truncate"><strong>{{ review.title.title() }}</strong></h5>
                             <p class="truncate"><strong>Author:</strong> {{ review.author.title() }}</p>
@@ -37,7 +37,7 @@
                             <p class="truncate"><strong>Created by:</strong> {{ review.user_created.capitalize() }}</p>
                             {% if review.affiliate_link %}
                             <div class="spacing"></div>
-                            <a href="{{ review.affiliate_link }}" target="_blank" id="fix-btn-location" class="uppercase btn light-green darken-2">Buy Now!</a>
+                            <a href="{{ review.affiliate_link }}" target="_blank" class="fix-btn-location uppercase btn light-green darken-2">Buy Now!</a>
                             {% endif %}
                         </div>
                         <div class="card-reveal">
@@ -45,7 +45,7 @@
                             <p><strong>Summary:</strong> {{ review.summary }}</p>
                             {% if review.affiliate_link %}
                             <div class="spacing"></div>
-                            <a href="{{ review.affiliate_link }}" target="_blank" id="fix-btn-location" class="uppercase btn light-green darken-2">Buy Now!</a>
+                            <a href="{{ review.affiliate_link }}" target="_blank" class="fix-btn-location uppercase btn light-green darken-2">Buy Now!</a>
                             {% endif %}
                             {% if session["user"] == review.user_created or session["user"] == "admin" %}
                                 <a href="{{ url_for('edit_review', review_id=review._id) }}"
