--- a/templates/edit_review.html
+++ b/templates/edit_review.html
@@ -11,7 +11,7 @@
                 <i class="fas fa-book prefix light-green-text text-darken-2"></i>
                 <input id="title" name="title" type="text" minlength="1" maxlength="40"
                     value="{{ review.title.title() }}" class="validate" required>
-                <label for="title">Title...</label>
+                <label class="font-black" for="title">Title...</label>
             </div>
         </div>
         <!-- add author -->
@@ -20,7 +20,7 @@
                 <i class="fas fa-user-circle prefix light-green-text text-darken-2"></i>
                 <input id="author" name="author" type="text" class="validate" minlength="1" 
                     maxlength="50" value="{{ review.author.title() }}" required>
-                <label for="author">Author...</label>
+                <label class="font-black" for="author">Author...</label>
             </div>
         </div>
         <!-- add genre -->
@@ -29,7 +29,7 @@
                 <i class="fas fa-masks-theater prefix light-green-text text-darken-2"></i>
                 <input id="genre" name="genre" type="text" maxlength="40" class="capitalize validate"
                     value="{{ review.genre }}" required>
-                <label for="genre">Genre...</label>
+                <label class="font-black" for="genre">Genre...</label>
             </div>
         </div>
         <!-- select rating */10 -->
@@ -49,6 +49,7 @@
                     <option value="9" {% if review.rating == "9" %}selected{% endif %}>9</option>
                     <option value="10" {% if review.rating == "10" %}selected{% endif %}>10</option>
                 </select>
+                <label class="font-black" for="rating">Rating</label>
             </div>
         </div>
         <!-- add summary/description -->
@@ -59,7 +60,7 @@
                     class="materialize-textarea validate" required>
                     {{- review.summary -}}
                 </textarea>
-                <label for="summary">Summary...</label>
+                <label class="font-black" for="summary">Summary...</label>
             </div>
         </div>
         <!-- add image URL -->
@@ -73,7 +74,7 @@
                         at the top of the page) here!"></i>
                 <input id="cover_art" name="cover_art" type="text" class="validate"
                     value="{{ review.cover_art }}" required>
-                <label for="cover_art">Image URL...</label>
+                <label class="font-black" for="cover_art">Image URL...</label>
             </div>
         </div>
         <!-- add affiliate link -->
@@ -83,7 +84,7 @@
                 <i class="fas fa-link prefix light-green-text text-darken-2"></i>
                 <input id="affiliate_link" name="affiliate_link" type="text" class="validate"
                     value="{{ review.affiliate_link }}">
-                <label for="affiliate_link">Affilate Link...</label>
+                <label class="font-black" for="affiliate_link">Affilate Link...</label>
             </div>
         </div>
         {% endif %}
