--- a/static/css/style.css
+++ b/static/css/style.css
@@ -1,8 +1,13 @@
 /*---------------------------------------------------------- Color */
 
 .text-shadow {
-    text-shadow: 2px 2px 2px rgba(0,0,0,0.5);
+    text-shadow: 2px 2px 2px rgba(0,0,0,0.9);
 }
+
+.font-black {
+    color: black !important;
+}
+
 
 /*---------------------------------------------------------- overflow */
 .overflow-hidden {
