changed the large font size class from xlarge to 1-5rem

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -16,7 +16,7 @@
 /*---------------------------------------------------------- Font */
 
 .font-size-large {
-    font-size: x-large;
+    font-size: 1.5rem;
 }
 
 .card .card-title {
