added a cancel button on the change_password.html to go back to profile

--- a/templates/change_password.html
+++ b/templates/change_password.html
@@ -39,6 +39,12 @@
                         Update Password
                     </button>
                 </div>
+                <!-- Cancel and return to profile -->
+                <div class="row">
+                    <a href="{{ url_for('profile', username=session['user']) }}" class="col s12 btn-large red darken-1 font-size-large text-shadow">
+                        Cancel
+                    </a>
+                </div>
             </div>
         </form>
     </div>
