fix: added javascript to stop double option in iOS

--- a/templates/add_review.html
+++ b/templates/add_review.html
@@ -93,4 +93,5 @@
         </div>
     </form>
 </div>
+<script src="{{ url_for('static', filename='js/option_select.js') }}"></script>
 {% endblock %}
